  * debian/patches/*:
    - Fix spelling in binary.
    - Patch Makefile.in files to honour CPPFLAGS.
    - Update autoconf files to work with version 2.69.
    - Fix missing yylex() declarations.
  * debian/rules:
    - Build with all hardening flags set.
    - Build with autoreconf.
    - Ensure that 32-bit architectures compile with LFS support.

 -- Carlos Maddela <e7appew@gmail.com>  Mon, 03 Apr 2017 03:27:44 +1000

cutils (1.6-4) unstable; urgency=medium

  * QA upload
  * Set maintainer field to Debian QA Group (see #790728)
  * Declare debhelper compat level, bump to 10. Closes: #817323, #817417

 -- Christoph Biedl <debian.axhn@manchmal.in-ulm.de>  Sun, 18 Dec 2016 14:19:01 +0100

cutils (1.6-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Rebuild with newer debhelper to get rid of install-info calls in
    maintainer scripts (Closes: #708490).
  * debian/cutils.prerm: Empty maintainer script to ensure clean upgraded.

 -- Sebastian Ramacher <sramacher@debian.org>  Sat, 10 Aug 2013 21:06:20 +0200

cutils (1.6-3) unstable; urgency=low

  * Change build-depends to use flex-old rather than flex; 
    builds now (closes: #253654)
  * Updated standards-version to 3.6.1
  * Updated debhelper to 4

 -- Hamish Moffatt <hamish@debian.org>  Sun, 15 Aug 2004 15:26:29 +1000

cutils (1.6-2) unstable; urgency=low

  * Downgraded DH_COMPAT to 2 since it doesn't need 3 anyway (closes: #119977)
  * Fixed bug in debian/rules clean target (forgot to run dh_clean)

 -- Hamish Moffatt <hamish@debian.org>  Sun, 25 Nov 2001 14:04:40 +1100

cutils (1.6-1) unstable; urgency=low

  * New upstream release (closes: #107859)

 -- Hamish Moffatt <hamish@debian.org>  Sat, 11 Aug 2001 11:42:09 +1000

cutils (1.5.2-8) unstable; urgency=low

  * Applied patch to fix bug in cobfusc (closes: #69580)
  * Updated Standards-Version

 -- Hamish Moffatt <hamish@debian.org>  Wed,  6 Dec 2000 20:47:18 +1100

cutils (1.5.2-7) unstable; urgency=low
