@@ -15,6 +15,7 @@ cutils (1.6-5) UNRELEASED; urgency=medium
     - Build with all hardening flags set.
     - Build with autoreconf.
     - Ensure that 32-bit architectures compile with LFS support.
+    - Backup and restore files that change during build.
 
  -- Carlos Maddela <e7appew@gmail.com>  Mon, 03 Apr 2017 03:27:44 +1000
 
